# aisd_labs

./: README.md
1 semester/Lab_1/: CMakeLists.txt  README.md
1 semester/Lab_1/include/: point.h  polyline.h  random.h
1 semester/Lab_1/src/: main.cc
1 semester/Lab_2/: CMakeLists.txt  README.md
1 semester/Lab_2/include/: LinkedList.h  Node.h  Random.h
1 semester/Lab_2/src/: main.cc
1 semester/Lab_3/: CMakeLists.txt  README.md
1 semester/Lab_3/include/: Analytics.h  Random.h  Sorting.h  Stats.h  User.h
1 semester/Lab_3/src/: main.cc
1 semester/Lab_3/statistics/: data.xlsx
2 semester/Lab_1/: CMakeLists.txt  README.md  main.cc  result.xlsx
2 semester/Lab_1/include/: Random.h  Set.h  Task.h  TimeTest.h
2 semester/Lab_1/src/: Random.cc  Set.cc  Task.cc  TimeTest.cc
2 semester/Lab_2/: CMakeLists.txt  main.cc
2 semester/Lab_2/include/: Compare_hash.h  Equal.h  Hash.h  HashTable.h  Random.h
2 semester/Lab_2/src/: Compare_hash.cc  Equal.cc  Hash.cc  Random.cc
2 semester/Lab_3/: CMakeLists.txt  README.md  main.cc
2 semester/Lab_3/include/: Graph.h
